--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "crypto": "0.0.3",
     "lodash": "^3.10.1",
+    "require-all": "^2.0.0",
     "rest": "^1.3.1",
     "when": "^3.7.4"
   }
