--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha $(find test -name '*.js')",
-    "dev": " ./node_modules/nodemon/bin/nodemon.js server.js"
+    "dev": " ./node_modules/nodemon/bin/nodemon.js server.js",
+    "socket": "./node_modules/nodemon/bin/nodemon.js socket.js",
+    "chart": "./node_modules/nodemon/bin/nodemon.js chart.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +16,15 @@
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "crypto": "0.0.3",
+    "express": "^4.13.3",
     "hapi": "^11.1.1",
     "lodash": "^3.10.1",
     "mocha": "^2.3.3",
     "nodemon": "^1.8.1",
     "require-all": "^2.0.0",
     "rest": "^1.3.1",
-    "when": "^3.7.4"
+    "socket.io": "^1.3.7",
+    "when": "^3.7.4",
+    "ws": "^0.8.0"
   }
 }
